tests/testcases/invalid/03_unterminated_string.ciel
int main() {
    char s[10] = "Hello
    ;
    return 0;
}
